--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-route": "^1.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-slick": "^0.26.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
